# TensorTech-Internship

MLX90381/firmware/: .gitignore  .mxproject  CMakeLists.txt  MLX90381.ioc  README.md
MLX90381/firmware/Core/Inc/: mlx90381.h
MLX90381/firmware/Core/Src/: main.c  mlx90381.c
MLX90381/ui/: .gitignore  MLX90381_UI.spec  README.md  main.py  package-lock.json  package.json  requirements.txt
MLX90381/ui/src-tauri/: Cargo.toml  tauri.conf.json
MLX90381/ui/src-tauri/capabilities/: default.json
MLX90381/ui/src-tauri/icons/: icon.icns
MLX90381/ui/src-tauri/src/: main.rs  serial_handler.rs
PicoScope/: README.md
PicoScope/practice/: simple_trangle.py
cmg-10m-thermal/c/: Makefile  README.md
cmg-10m-thermal/c/include/: bridge.h  config.h  thermo.h  utils.h
cmg-10m-thermal/c/include/commands/: common.h  get.h
cmg-10m-thermal/c/src/: bridge.c  commands.c  config.c  hardware.c  main.c  utils.c
cmg-10m-thermal/c/src/commands/: get.c  init_config.c  set.c
